--- a/projeto_lab/public/index.html
+++ b/projeto_lab/public/index.html
@@ -22,6 +22,8 @@
     crossorigin="anonymous"/>
     <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rubik:400,500,500i,700,700i&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
